--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.1"
+    "react-router-dom": "^6.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
